# EmarcaTech_Display_Comunicacao

./: CMakeLists.txt  README.md  diagram.json  main.c  matriz_led.c
Display_Bibliotecas/: font.h  ssd1306.c
